--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -6,11 +6,11 @@
       <p #animatedElement class="contact-form-text">Feel free to reach out and share your ideas. Let's collaborate to bring them to life!
       </p>
 
-        <form class="contact-form" action="https://f0148ccd@yusuf-filiz.developerakademie.net/send_mail/send_mail.php" method="post">
+        <form class="contact-form" (submit)="sendMail()" #myForm>
           <div #animatedElement class="form-input-container">
             <img id="nameInputImg" src="assets/img/fullfilled.svg" alt="" class="hide">
             <label id="nameLabel">Your name</label>
-            <input name="name" id="nameInput"
+            <input name="name" id="nameInput" #nameField
               (focus)="nameLabelUp();"
               (focusout)="nameLabelDown(); updateFormFilledStatus($event, 'nameInput', 'nameLabel', 'form-filled', false, 'requiredNameText', 'name'); updateFormFilledStatus($event, 'nameInput', 'nameLabel', 'form-filled-label', true, 'requiredNameText', 'name');"
               (keyup)="updateFormFilledStatus($event, 'nameInput', 'nameLabel', 'form-filled', false, 'requiredNameText', 'name'); updateFormFilledStatus($event, 'nameInput', 'nameLabel', 'form-filled-label', true, 'requiredNameText', 'name');"
@@ -20,7 +20,7 @@
           <div #animatedElement class="form-input-container">
             <img id="emailInputImg" src="assets/img/fullfilled.svg" alt="" class="hide">
             <label id="emailLabel">Your email</label>
-            <input name="email" id="emailInput"
+            <input name="email" id="emailInput" #emailField
             maxlength="70"
               (focus)="emailLabelUp();"
               (focusout)="emailLabelDown(); updateFormFilledStatus($event, 'emailInput', 'emailLabel', 'form-filled', false, 'requiredEmailText', 'email'); updateFormFilledStatus($event, 'emailInput', 'emailLabel', 'form-filled-label', true, 'requiredEmailText', 'email');"
@@ -31,13 +31,13 @@
           <div #animatedElement class="textarea-container">
             <img id="textAreaImg" src="assets/img/fullfilled.svg" alt="" class="hide">
             <label id="textLabel" class="textarea-label">Your message</label>
-            <textarea name="message" id="textArea" class="contact-message"
+            <textarea name="message" id="textArea" class="contact-message" #messageField
               (focus)="textLabelUp();"
               (focusout)="textLabelDown(); updateFormFilledStatus($event, 'textArea', 'textLabel', 'form-filled', false, 'requiredMessageText', 'text'); updateFormFilledStatus($event, 'textArea', 'textLabel', 'form-filled-label', true, 'requiredMessageText', 'text');"
               (keyup)="updateFormFilledStatus($event, 'textArea', 'textLabel', 'form-filled', false, 'requiredMessageText', 'text'); updateFormFilledStatus($event, 'textArea', 'textLabel', 'form-filled-label', true, 'requiredMessageText', 'text');"></textarea>
             <p id="requiredMessageText" class="required-text hide">Please enter at least 20 characters.</p>
           </div>
-          <button>Send message</button>
+          <button #sendButton>Send message</button>
         </form>
     </div>
     <div class="scroll-up">
