--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -5,7 +5,6 @@
       <p #animatedElement class="contact-form-headline">Want to discuss a new project?</p>
       <p #animatedElement class="contact-form-text">Feel free to reach out and share your ideas. Let's collaborate to bring them to life!
       </p>
-
         <form class="contact-form" (submit)="sendMail()" #myForm>
           <div #animatedElement class="form-input-container">
             <img id="nameInputImg" src="assets/img/fullfilled.svg" alt="" class="hide">
@@ -37,7 +36,7 @@
               (keyup)="updateFormFilledStatus($event, 'textArea', 'textLabel', 'form-filled', false, 'requiredMessageText', 'text'); updateFormFilledStatus($event, 'textArea', 'textLabel', 'form-filled-label', true, 'requiredMessageText', 'text');"></textarea>
             <p id="requiredMessageText" class="required-text hide">Please enter at least 20 characters.</p>
           </div>
-          <button #sendButton>Send message</button>
+          <button class="send-btn" #sendButton [disabled]="!isFormValid">Send message</button>
         </form>
     </div>
     <div class="scroll-up">
