--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -75,6 +75,16 @@
   </div>
 </div>
 
+<div class="email-sent-popup" [ngClass]="{'visible': isEmailSentPopupVisible}">
+  <div class="wrapper">
+    <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+      <circle class="checkmark__circle" cx="26" cy="26" r="25" fill="none"/>
+      <path class="checkmark__check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/>
+    </svg>
+    <p>Message sent successfully!</p>
+  </div>
+</div>
+
 <div class="legal-notice-container" [ngClass]="{ 'show': isLegalNoticeVisible$ | async }">
   <div class="close-legal-notice-container">
     <p id="pgerman" (click)="switchToGerman()" class="language-german chosen-language">DE</p>
