made some design improvements in the contact component

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -706,7 +706,12 @@
       }
     }
 
+    input {
+      width: 250px !important;
+    }
+
     textarea {
+      width: 266px !important;
       height: 140px !important;
     }
   }
