changed some css settings in legal notice

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -396,15 +396,15 @@
         Company,
         Wilton Plaza Wilton Place, Dublin 2, Irland; <strong>Rechtsgrundlagen:</strong> Berechtigte Interessen (Art. 6
         Abs.
-        1 S. 1 lit. f) DSGVO); <strong>Website:</strong> <a href="https://www.linkedin.com"
-          target="_blank">https://www.linkedin.com</a>; <strong>Datenschutzerklärung:</strong> <a
+        1 S. 1 lit. f) DSGVO); <strong>Website:</strong><br><a href="https://www.linkedin.com"
+          target="_blank">https://www.linkedin.com</a>; <br><strong>Datenschutzerklärung:</strong> <br><a
           href="https://www.linkedin.com/legal/privacy-policy"
           target="_blank">https://www.linkedin.com/legal/privacy-policy</a>;
-        <strong>Auftragsverarbeitungsvertrag:</strong>
+        <strong>Auftragsverarbeitungsvertrag:</strong> <br>
         <a href="https://legal.linkedin.com/dpa" target="_blank">https://legal.linkedin.com/dpa</a>;
-        <strong>Standardvertragsklauseln (Gewährleistung Datenschutzniveau bei Verarbeitung in Drittländern):</strong>
+        <strong>Standardvertragsklauseln (Gewährleistung Datenschutzniveau bei Verarbeitung in Drittländern):</strong><br>
         <a href="https://legal.linkedin.com/dpa" target="_blank">https://legal.linkedin.com/dpa</a>;
-        <strong>Widerspruchsmöglichkeit (Opt-Out):</strong> <a
+        <strong>Widerspruchsmöglichkeit (Opt-Out):</strong> <br><a
           href="https://www.linkedin.com/psettings/guest-controls/retargeting-opt-out"
           target="_blank">https://www.linkedin.com/psettings/guest-controls/retargeting-opt-out</a>.
       </li>
