--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -436,8 +436,7 @@
   }
 
   ul {
-    margin-left: 60px;
-    margin-right: 60px;
+    text-align: justify;
   }
 }
 
@@ -572,15 +571,18 @@
     font-family: "Overpass";
     transition: transform 400ms ease-out;
     p {
-      text-align: justify;
+      margin-left: 20px;
+      margin-right: 20px;
     }
 
     h1 {
+      font-size: 22px;
       margin-left: 20px;
       margin-right: 20px;
     }
 
     h2 {
+      font-size: 20px;
       margin-left: 30px;
       margin-right: 30px;
     }
@@ -591,8 +593,11 @@
     }
 
     ul {
-      margin-left: 30px;
       margin-right: 30px;
+    }
+
+    a {
+      font-size: 12px;
     }
   }
 
