changed some css settings for ios user

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -483,6 +483,8 @@
 
   .language-german {
     transition: 100ms ease-in-out;
+    margin-left: 0px;
+    margin-right: 0px;
     cursor: pointer;
     padding: 10px;
     border-radius: 10px;
@@ -493,6 +495,8 @@
 
   .language-english {
     transition: 100ms ease-in-out;
+    margin-left: 0px;
+    margin-right: 0px;
     cursor: pointer;
     padding: 10px;
     border-radius: 10px;
