--- a/src/app/title/title.component.scss
+++ b/src/app/title/title.component.scss
@@ -228,6 +228,10 @@
     }
   }
 
+  .title-email-scroll {
+    height: 5vh;
+  }
+
   .line-name {
     justify-content: center;
     margin-top: 15px;
