--- a/src/app/header/header2.component.scss
+++ b/src/app/header/header2.component.scss
@@ -297,11 +297,11 @@
   }
 
   .text-email {
-    height: 150px;
+    height: 120px;
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 420px) {
   .text-email {
     width: 100%;
     justify-content: flex-start;
@@ -309,10 +309,28 @@
     margin-bottom: -40px;
     margin-top: 10px;
     .text {
-      font-size: 30px;
+      font-size: 26px;
     }
     .email {
       font-size: 14px;
     }
   }
 }
+
+@media (max-width: 375px) and (max-height: 667px) {
+  .menu-socials {
+    height: 45%;
+    justify-content: flex-start;
+  }
+
+  .text-email {
+    height: 85px;
+  }
+
+  .text-email {
+    .text {
+      font-size: 16px;
+    }
+  }
+}
+
