--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -242,6 +242,7 @@
           border: 4px solid #000;
           background-color: #fffcf3;
           padding: 10px 30px;
+          color: black;
           margin-top: 16px;
           margin-right: 16px;
           font-size: 21px;
@@ -398,7 +399,6 @@
 }
 
 @media (max-width: 1315px) {
-
   .arrow-down {
     width: 100% !important;
     img {
@@ -490,6 +490,7 @@
 
     .project-image {
       width: 100% !important;
+      height: 100% !important;
     }
   }
 
@@ -522,7 +523,6 @@
     width: 90%;
   }
 }
-
 
 @media (max-width: 538px) {
   .project-info {
