changed the email to a personalized one

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -101,7 +101,7 @@
       Friedberg 1315<br />
       9427 Wolfhalden<br />
       Schweiz<br />
-      <strong>E-Mail</strong>: y.filiz.ch@gmail.com<br />
+      <strong>E-Mail</strong>: contact.yusuffiliz@gmail.com<br />
       <br />
       <strong>Haftungsausschluss</strong><br />
       Der Autor übernimmt keine Gewähr für die Richtigkeit, Genauigkeit, Aktualität, Zuverlässigkeit und Vollständigkeit
