--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -32,7 +32,7 @@
         <span>
           <p class="text">Say Hi!</p>
           <div class="copy-email">
-            <p id="uniqueEmail" [class.hover-icon-container]="isHovered" class="email">y.filiz.ch@gmail.com</p>
+            <p id="uniqueEmail" [class.hover-icon-container]="isHovered" class="email">contact.yusuffiliz@gmail.com</p>
             <div class="icon-container" (mouseenter)="onMouseEnter()" (mouseleave)="onMouseLeave()" (click)="copyEmail()">
               <img src="assets/img/copy.svg" alt="" class="default-icon" draggable="false">
               <img src="assets/img/copy-hover.svg" alt="" class="hover-icon" draggable="false">
