changed the link for my linkedin profile

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -52,7 +52,7 @@
           <div class="icon" (click)="sendEmail()">
             <img src="assets/img/email.svg" draggable="false" alt="">
           </div>
-          <div class="icon" (click)="navigateTo('https://www.linkedin.com/in/yusuf-filiz-b75b2a196')">
+          <div class="icon" (click)="navigateTo('https://www.linkedin.com/in/yusuf-filiz')">
             <img src="assets/img/linkedin.svg" draggable="false" alt="">
           </div>
         </div>
