--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -8,8 +8,8 @@
             concepts into engaging digital solutions. I enjoy collaborating with designers and companies to bring their
             visions to life, ensuring seamless user experiences and visually stunning websites.</p><br>
           <p>I am excited to take the next step in my developer career and secure a junior web developer position that
-            challenges me to grow and further refine my skills. By joining a dynamic team, I am eager to contribute my
-            technical proficiency and innovative mindset to deliver exceptional results.</p><br>
+            challenges me to grow and further refine my skills. By joining a dynamic team,
+            I look forward to using my technical skills and creative approach to create great results.</p><br>
           <p>If you believe I would be a great fit for your projects, I invite you to reach out and connect with me.
             Let's discuss how we can collaborate to create impactful and cutting-edge web solutions. Don't hesitate to
             contact me today!</p>
