changed my about me text

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -4,15 +4,14 @@
       <div class="about-me-headline-text-img">
         <div class="text-padding" #animatedElement>
           <h1>About me</h1>
-          <p>I am a junior Front-end developer based in Wolfhalden, Switzerland, passionate about transforming creative
-            concepts into engaging digital solutions. I enjoy collaborating with designers and companies to bring their
-            visions to life, ensuring seamless user experiences and visually stunning websites.</p><br>
-          <p>I am excited to take the next step in my developer career and secure a junior web developer position that
-            challenges me to grow and further refine my skills. By joining a dynamic team,
-            I look forward to using my technical skills and creative approach to create great results.</p><br>
-          <p>If you believe I would be a great fit for your projects, I invite you to reach out and connect with me.
-            Let's discuss how we can collaborate to create impactful and cutting-edge web solutions. Don't hesitate to
-            contact me today!</p>
+          <p>I'm a junior Front-end developer based in Wolfhalden, Switzerland. I like turning creative ideas into
+            digital solutions. I enjoy working with designers and companies, helping them realize their ideas while
+            making sure the end product is user-friendly and visually pleasing.</p><br>
+          <p>I'm ready to take the next step in my career and find a junior web developer role that allows me to learn
+            and refine my skills. I'm excited about the opportunity to contribute my technical knowledge and creative
+            problem-solving to a collaborative team.</p><br>
+          <p>If you think I could be a good addition to your projects, I'd be happy to talk. Let's discuss how we can
+            work together to create effective and up-to-date web solutions. Feel free to get in touch!</p>
           <div>
             <button (click)="scrollToElement('contact')">Let's talk</button>
           </div>
