--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -437,7 +437,11 @@
   p {
     margin-left: 80px;
     margin-right: 80px;
-    text-align: justify;
+  }
+
+  li {
+    margin-left: 80px;
+    margin-right: 80px;
   }
 
   h1 {
@@ -455,9 +459,7 @@
     margin-right: 80px;
   }
 
-  ul {
-    text-align: justify;
-  }
+
 }
 
 .legal-notice-container.show {
@@ -536,6 +538,7 @@
   p {
     margin: 0;
     margin-right: 8px;
+    margin-left: 8px;
     font-family: "Syne";
     font-weight: 600;
   }
