added a new component for a list of my other projects

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -65,6 +65,34 @@
       </ng-template>
     </div>
   </div>
+  <div class="other-projects-container">
+    <button>Other Projects</button>
+    <div class="other-projects-list">
+      <div class="other-projects">
+        <span>Title of Project</span>
+        <div class="other-projects-tech-stack">
+          <span>
+            HTML
+          </span>
+          <span>
+            |
+          </span>
+          <span>
+            JavaScript
+          </span>
+          <span>
+            |
+          </span>
+          <span>
+            CSS
+          </span>
+        </div>
+        <div class="other-project-description">
+          <span>Description</span>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="arrow-down" (click)="scrollToElement('contact')">
     <div>
       <img #arrowDown src="assets/img/arrow-scroll-down-left.png" alt="" draggable="false">
