--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -398,6 +398,44 @@
   display: none;
 }
 
+.other-projects-container {
+  margin-top: -50px;
+  width: 1000px;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  button {
+    width: 213px;
+    height: 68px;
+    border: 4px solid #000;
+    background-color: #fffcf3;
+    font-size: 23px;
+    font-family: "Overpass";
+    cursor: pointer;
+    transition: ease-in-out 100ms;
+    text-align: center;
+    line-height: 64px;
+    margin-bottom: 32px;
+    &:hover {
+      width: 253px;
+      font-weight: 600;
+    }
+  }
+  .other-projects-list {
+    width: 100%;
+    height: fit-content;
+    .other-projects {
+      height: 50px;
+      display: flex;
+      justify-content: space-between;
+      border: solid 3px black;
+      margin-bottom: 30px;
+    }
+  }
+}
+
 @media (max-width: 1315px) {
   .arrow-down {
     width: 100% !important;
